# backend/src/main/java/com/example/wejam/verification/model/DocumentType.java
@@ -1,0 +1,6 @@
+package com.example.wejam.verification.model;
+
+public enum DocumentType {
+    FSSAI_CERTIFICATE,
+    LEASE_AGREEMENT
+}
